fixed full post overflow problem

--- a/docs/css/common/common.css
+++ b/docs/css/common/common.css
@@ -22,7 +22,7 @@ a:visited {
 }
 
 div.section{
-    background-color: #f7f7f7;
+    background-color: white;
     padding: 15px;
 }
 h1.section-title{
@@ -31,7 +31,8 @@ h1.section-title{
 
 div.full-post-container{
     padding: 15px;
-    background-color: #f7f7f7;
+    background-color:white;
+    display: inline-block;
 }
 h1.full-post-title{
     margin: 15px 0;
@@ -43,12 +44,19 @@ div.full-post-date{
 div.full-post-content{
     background-color: white;
     padding: 15px;
+    display: inline-block;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #45b;
 }
 
 div.post-container{
     background-color:white;
     padding: 15px;
     margin: 15px 0;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #45b;
 }
 h1.post-title{
     margin-top: 0px;
@@ -71,6 +79,9 @@ div.paper-container{
     background-color:white;
     padding: 15px;
     margin: 15px 0;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #45b;
 }
 h1.paper-title{
     margin-top: 0px;
